--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
-  "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+   "singleQuote": true,
+   "endOfLine": "lf",
+   "tabWidth": 2,
+   "arrowParens": "always",
+   "printWidth": 80
 }
